<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="192dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textAlignment="gravity"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:onClick="signup_start"
            android:text="@string/signup"
            android:textAlignment="gravity"
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/email_text"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textPersonName"
        android:textColor="#D32371"
        android:textColorHighlight="@android:color/holo_orange_dark"
        android:textColorLink="@android:color/holo_orange_dark"
        android:textCursorDrawable="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/pass_text"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginEnd="30dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="76dp"
        android:layout_height="84dp"
        android:layout_marginStart="305dp"
        android:layout_marginLeft="305dp"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_btn"
        android:onClick="sign_in_auth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/doctor"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:onClick="go_to_doc_signin"
        android:text="@string/login_as"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor">

        <Button
            android:id="@+id/button8"
            android:layout_width="197dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/doc_field_bg"
            android:onClick="go_to_doc_signin"
            android:text="@string/doctor"
            android:textColor="#001278" />

        <Button
            android:id="@+id/button9"
            android:layout_width="197dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/doc_field_bg"
            android:onClick="go_to_fam_signin"
            android:text="@string/family_member"
            android:textColor="#001278" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>