<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/top_pane"
            android:gravity="center"
            android:text="@string/more_settings"
            android:textAlignment="gravity"
            android:textColor="@color/itemcolortransparent"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu_bg"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detection_test_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/detection_test"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/detection_txt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="185dp"
                android:background="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/menu_bg">

            <TextView
                android:id="@+id/water_reminder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/set_water_drinking_reminder"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:src="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/menu_bg">

            <TextView
                android:id="@+id/med_reminder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/medication_reminder"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:src="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/menu_bg">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/set_routine"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="212dp"
                android:src="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout11"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/menu_bg">

            <TextView
                android:id="@+id/signout_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/sign_out"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240.5dp"
                android:src="@drawable/rightarrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout12"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/menu_bg">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/reminder_settings"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="151dp"
                android:src="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout13"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/menu_bg">

            <TextView
                android:id="@+id/nearbydoc_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/nearby_doctors"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="176dp"
                android:src="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout14"
            android:layout_width="391dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bmenu_bg">

            <TextView
                android:id="@+id/appointment_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/appointment_status"
                android:textColor="@color/itemcolortransparent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="138dp"
                android:src="@drawable/rightarrow" />

        </LinearLayout>

        <TextView
            android:id="@+id/u_id_txt"
            android:layout_width="375dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

</FrameLayout>